# framework.uifw.edje_multisense_plugin

./: COPYING  Makefile.am  configure.ac
debian/: changelog  control  copyright
mobile/: AUTHORS  COPYING  autogen.sh
mobile/debian/: rules
mobile/src/tizen_sound_player/: Makefile.am  tizen_sound_player.c
packaging/: edje_multisense_plugin.spec
src/tizen_sound_player/: tizen_sound_player.c
wearable/: README  configure.ac
wearable/debian/: edje-multisense-plugin.install
wearable/src/: Makefile.am
wearable/src/tizen_sound_player/: Makefile.am  tizen_sound_player.c
